# az-scout-bdd-api

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
api/: Dockerfile  main.py  requirements.txt
src/az_scout_bdd_api/: __init__.py  config.py  db.py  db_api.py  pagination.py  routes.py  validation.py
tests/: test_api_v1.py  test_pagination.py
