[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "az-scout-bdd-api"
dynamic = ["version"]
description = "Standalone REST API for Azure VM SKU pricing & spot eviction data"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.2",
    "psycopg_pool>=3.3",
    "azure-identity>=1.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.9",
    "mypy>=1.14",
    "httpx>=0.28",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/az_scout_bdd_api/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/az_scout_bdd_api"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["src/az_scout_bdd_api/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
